tests/baselines/reference/decrementOperatorWithAnyOtherTypeInvalidOperations.errors.txt
==== tests/cases/compiler/decrementOperatorWithAnyOtherTypeInvalidOperations.ts (46 errors) ====
    // -- operator on any type
    var ANY1;
    var ANY2: any[] = ["", ""];
    
    var obj: () => {}
    var obj1 = { x: "", y: () => { } };
    function foo(): any {
        var a;
        return a;
    }
    class A {
        public a: any;
        static foo() {
            var a;
            return a;
        }
    }
    module M {
        export var n: any;
    }
    var objA = new A();
    
    // any type var
    var ResultIsNumber1 = --ANY2;
                            ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(24,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber2 = --A;
                            ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(25,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(25,25): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber3 = --M;
                            ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(26,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(26,25): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber4 = --obj;
                            ~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(27,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber5 = --obj1;
                            ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(28,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber6 = ANY2--;
                          ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(30,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber7 = A--;
                          ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(31,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(31,23): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber8 = M--;
                          ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(32,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(32,23): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber9 = obj--;
                          ~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(33,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber10 = obj1--;
                           ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(34,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // any type literal
    var ResultIsNumber11 = --{};
                             ~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(37,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(37,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber12 = --null;
                             ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(38,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(38,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber13 = --undefined;
                             ~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(39,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber14 = null--;
                           ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(41,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(41,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber15 = {}--;
                           ~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(42,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(42,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber16 = undefined--;
                           ~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(43,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // any type expressions
    var ResultIsNumber17 = --foo();
                             ~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(46,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber18 = --A.foo();
                             ~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(47,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber19 = --(null + undefined);
                             ~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(48,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber20 = --(null + null);
                             ~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(49,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber21 = --(undefined + undefined);
                             ~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(50,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber22 = --obj1.x;
                             ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(51,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber23 = --obj1.y;
                             ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(52,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber24 = foo()--;
                           ~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(54,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber25 = A.foo()--;
                           ~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(55,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber26 = (null + undefined)--;
                           ~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(56,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber27 = (null + null)--;
                           ~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(57,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber28 = (undefined + undefined)--;
                           ~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(58,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber29 = obj1.x--;
                           ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(59,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber30 = obj1.y--;
                           ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(60,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // miss assignment operators
    --ANY2;
      ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(63,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    ANY2--;
    ~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(65,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    --ANY1--;
      ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(67,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --ANY1++;
      ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(68,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++ANY1--;
      ~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(69,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --ANY2[0]--;
      ~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(70,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --ANY2[0]++;
      ~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(71,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++ANY2[0]--;
      ~~~~~~~~~
!!! decrementOperatorWithAnyOtherTypeInvalidOperations.ts(72,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.